# python_programming_task

./: .gitignore  Dockerfile  Makefile  README.md  README_RESPONSE.md  SOLUTION.md  castlabs-variables.env  docker-compose.yaml  docker-compose.yml  pyproject.toml  run.py  start.py
castlabs_proxy/: __init__.py  forms.py  routes.py  run.py  utils.py
castlabs_proxy/config/: base_config.py  testing.py
castlabs_proxy/templates/: base.html  status.html
castlabs_proxy/tests/: conftest.py  test_proxy.py
castlabs_proxy/tests/fixtures/: client.py
secrets/: flask_secret.txt  jwt_token.txt
src/: _constants.py  app.py  buissness_logic.py
src/utils/: buissness_logic.py  datetime.py  jwt.py  request.py
tests/: conftest.py  test_buissness_logic.py  test_proxy.py
tests/utils/: jwt.py
upstream/: Dockerfile  Makefile  README.md  pyproject.toml  start.py
upstream/src/: _constants.py  app.py  buissness_logic.py
