[tool.poetry]
name = "python_programming_task"
version = "0.1.0"
description = "Castlabs Python programming task"
authors = ["Pedro José Piquero Plaza <pedropiqueroplaza@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
