[tool.poetry]
name = "python_programming_task"
version = "0.1.0"
description = "Castlabs Python programming task"
authors = ["Pedro José Piquero Plaza <pedropiqueroplaza@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-shell-ipython = "^0.4.1"
ipython = "^7.16.1"
pyjwt = "^1.7.1"
requests = "^2.24.0"
Flask-WTF = "^0.14.3"
wtforms = "^2.3.1"
humanize = "^2.5.0"
Babel = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
