[project]
name = "aync_http_proxy"
authors = [
 {name = "Jakub Buczyński", email = "jakub@buczynski.net.pl"},
]
description = "Solution to recruitment task provided in https://github.com/castlabs/python_programming_task"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.0.1"
dependencies = [
 "aiohttp==3.8.4"
]


[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = ["ruff==0.0.265",
       "mypy==1.3.0",
       "black==23.3.0",
       "isort==5.12.0"]
test = ["pytest==7.3.1", "pytest-aiohttp==1.0.4"]


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.isort]
line_length = 88
force_alphabetical_sort_within_sections = true
force_single_line = true


[tool.mypy]
exclude = ["test_"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
